--- a/wiki/fr/TechDraw_StackDown.html
+++ b/wiki/fr/TechDraw_StackDown.html
@@ -57,14 +57,12 @@
 </p><p>Voir <a href="../fr/TechDraw_StackTop.html" title="TechDraw StackTop/fr">TechDraw Empiler en haut</a>.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackUp.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackUp.html" title="TechDraw StackUp/fr">Empiler vers le haut</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Dimension.html" title="TechDraw Dimension/fr">Cote</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -104,15 +102,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124124835
+Cached time: 20260124124847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.121 seconds
-Preprocessor visited node count: 324/1000000
-Post&#8208;expand include size: 24298/2097152 bytes
-Template argument size: 9820/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.112 seconds
+Preprocessor visited node count: 323/1000000
+Post&#8208;expand include size: 24463/2097152 bytes
+Template argument size: 9930/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -120,15 +118,15 @@ Unstrip post&#8208;expand size: 1212/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.776      1 -total
- 39.29%    9.735      1 Template:TechDraw_Tools_navi/fr
- 35.68%    8.839      2 Template:Navigation_menu_2
- 28.04%    6.946      1 Template:Userdocnavi/fr
- 16.04%    3.973      2 Template:Docnav/fr
- 14.86%    3.682      1 Template:GuiCommand/fr
+100.00%   27.714      1 -total
+ 42.64%   11.816      1 Template:TechDraw_Tools_navi/fr
+ 28.25%    7.830      2 Template:Navigation_menu_2
+ 24.81%    6.877      1 Template:Userdocnavi/fr
+ 19.38%    5.370      1 Template:GuiCommand/fr
+ 11.48%    3.180      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296991-0!canonical and timestamp 20260124124834 and revision id 1743381. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296991-0!canonical and timestamp 20260124124847 and revision id 1743383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
