--- a/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCascadeHorizDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCascadeHorizDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCascadeHorizDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHorizontaleMa&szlig;eAnordnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCascadeHorizDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCascadeHorizDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCascadeHorizDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Distanzia in Parallelo Quote Orizzontali (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCascadeHorizDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wymiar poziomy kaskadowo (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,15 +58,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Sp&eacute;cifiez &agrave; votre convenance l'espacement de la cascade avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez deux ou plusieurs cotes horizontales.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e, les autres cotes seront positionn&eacute;es par rapport &agrave; cette cote.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cascader les cotes horizontales</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader les cotes horizontales</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cascader horizontalement les cotes</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader horizontalement les cotes</b> du menu.</li></ul></li>
 <li>Les cotes sont uniform&eacute;ment espac&eacute;es et leurs textes sont centr&eacute;s.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -118,34 +116,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185650
+Cached time: 20260124185732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.096 seconds
-Preprocessor visited node count: 357/1000000
-Post&#8208;expand include size: 26189/2097152 bytes
-Template argument size: 10506/2097152 bytes
+CPU time usage: 0.071 seconds
+Real time usage: 0.094 seconds
+Preprocessor visited node count: 356/1000000
+Post&#8208;expand include size: 26182/2097152 bytes
+Template argument size: 10499/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1401/5000000 bytes
+Unstrip post&#8208;expand size: 1405/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.583      1 -total
- 31.00%    6.380      1 Template:TechDraw_Tools_navi/fr
- 22.99%    4.732      2 Template:Navigation_menu_2
- 16.83%    3.465      1 Template:GuiCommand/fr
- 13.62%    2.803      1 Template:Userdocnavi/fr
- 13.06%    2.689      2 Template:Docnav/fr
-  8.23%    1.695      1 Template:Button
-  7.35%    1.512      1 Template:Caption
-  6.59%    1.357      1 Template:MenuCommand
+100.00%   18.337      1 -total
+ 38.69%    7.095      1 Template:TechDraw_Tools_navi/fr
+ 28.24%    5.179      2 Template:Navigation_menu_2
+ 15.94%    2.922      1 Template:Userdocnavi/fr
+ 12.46%    2.285      1 Template:GuiCommand/fr
+ 12.38%    2.271      2 Template:Docnav/fr
+  6.66%    1.221      1 Template:Caption
+  5.75%    1.055      1 Template:Button
+  5.10%    0.935      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124185650 and revision id 1743464. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124185731 and revision id 1743466. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
