--- a/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
@@ -62,8 +62,8 @@
 <li>S&eacute;lectionnez deux ou plusieurs cotes horizontales.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e, les autres cotes seront positionn&eacute;es par rapport &agrave; cette cote.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cascader horizontalement les cotes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader horizontalement les cotes</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cascader les cotes horizontales</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader les cotes horizontales</b> du menu.</li></ul></li>
 <li>Les cotes sont uniform&eacute;ment espac&eacute;es et leurs textes sont centr&eacute;s.</li></ol>
 <p><span id="Notes"></span>
 </p>
@@ -116,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185956
+Cached time: 20260124190017
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.112 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.135 seconds
 Preprocessor visited node count: 356/1000000
-Post&#8208;expand include size: 26176/2097152 bytes
-Template argument size: 10493/2097152 bytes
+Post&#8208;expand include size: 26170/2097152 bytes
+Template argument size: 10487/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,18 +132,18 @@ Unstrip post&#8208;expand size: 1405/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.831      1 -total
- 31.28%    7.454      1 Template:TechDraw_Tools_navi/fr
- 22.31%    5.316      2 Template:Navigation_menu_2
- 16.86%    4.019      1 Template:Userdocnavi/fr
- 13.62%    3.246      1 Template:GuiCommand/fr
- 13.50%    3.217      2 Template:Docnav/fr
-  9.03%    2.153      1 Template:MenuCommand
-  6.90%    1.643      1 Template:Button
-  6.18%    1.473      1 Template:Caption
+100.00%   33.859      1 -total
+ 24.33%    8.238      1 Template:TechDraw_Tools_navi/fr
+ 20.44%    6.922      2 Template:Docnav/fr
+ 17.93%    6.072      1 Template:GuiCommand/fr
+ 16.41%    5.556      2 Template:Navigation_menu_2
+ 13.81%    4.676      1 Template:Userdocnavi/fr
+  8.19%    2.772      1 Template:Caption
+  8.06%    2.728      1 Template:Button
+  5.11%    1.731      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124185956 and revision id 1743468. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124190017 and revision id 1743470. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
